--- a/Proyecto2/Proyecto2.vcxproj
+++ b/Proyecto2/Proyecto2.vcxproj
@@ -144,11 +144,16 @@
     <ClInclude Include="Enfermedad.h" />
     <ClInclude Include="IReader.h" />
     <ClInclude Include="IWriter.h" />
+    <ClInclude Include="JsonReader.h" />
+    <ClInclude Include="JsonWriter.h" />
+    <ClInclude Include="lib\json.hpp" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuAnalizar.h" />
     <ClInclude Include="MenuCarga.h" />
+    <ClInclude Include="Modelo.h" />
     <ClInclude Include="Paciente.h" />
     <ClInclude Include="TransformadorCsv.h" />
+    <ClInclude Include="TransformadorJson.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CSVReader.cpp" />
