ahora si diria Tapon

--- a/Proyecto2/Proyecto2.vcxproj.filters
+++ b/Proyecto2/Proyecto2.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClCompile Include="CSVWriter.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="TransformadorJson.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
