--- a/Proyecto2/Proyecto2.vcxproj
+++ b/Proyecto2/Proyecto2.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="MenuCarga.cpp" />
     <ClCompile Include="Paciente.cpp" />
     <ClCompile Include="principal.cpp" />
+    <ClCompile Include="TransformadorJson.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
