--- a/Proyecto2/Proyecto2.vcxproj.filters
+++ b/Proyecto2/Proyecto2.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="JsonWriter.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="BootStrater.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Paciente.cpp">
