--- a/Proyecto2/Proyecto2.vcxproj
+++ b/Proyecto2/Proyecto2.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BinaryReader.h" />
+    <ClInclude Include="BinaryWriter.h" />
     <ClInclude Include="BootStrater.h" />
     <ClInclude Include="CsvReader.h" />
     <ClInclude Include="CsvWriter.h" />
@@ -152,6 +154,7 @@
     <ClInclude Include="MenuAnalizar.h" />
     <ClInclude Include="MenuCarga.h" />
     <ClInclude Include="Paciente.h" />
+    <ClInclude Include="TransformadorBinario.h" />
     <ClInclude Include="TransformadorCsv.h" />
     <ClInclude Include="TransformadorJson.h" />
   </ItemGroup>
