--- a/Proyecto2/Proyecto2.vcxproj.filters
+++ b/Proyecto2/Proyecto2.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="TransformadorBinario.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="MiExepcion.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Paciente.cpp">
